# p2p-review-protocol

./: README.md  cabal.project  marcoesposito-cdp-final.cabal  textileTests.hs
src/: NFTMintingPolicy.hs  README.md  ReviewContract.hs  ReviewPolicy.hs  Tests.hs  TestsParallel.hs  TxConstruction.hs  Types.hs  Utils.hs
