Cabal-Version:      2.4
Name:               marcoesposito-cdp-final
Version:            0.1.0.0
Author:             Marco Esposito
Maintainer:         maresp@tutanota.com
Build-Type:         Simple
Copyright:          © 2023 Marco Esposito
License:            Apache-2.0
License-files:      LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     ReviewContract
                     , NFTMintingPolicy
                     , Types
                     , Utils
                     , TxConstruction
                     , Tests
                     , TestsParallel                   
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
                     , lens
                     , freer-simple
                     , mtl
                     , transformers >=0.5.6.2
                     , cardano-wallet-core
                     , ghc-prim
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable marcoesposito-cdp-final
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.1.0,
        marcoesposito-cdp-final

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010    